# WickClone

./: .replit  README.md  afks.py  anti.json  autoresponse.json  badges.json  blacklist.json  config.json  friends.json  ignore.json  info.json  logs.json  main.py  proxies.txt  pyproject.toml  staffs.json  vanity.json  verification.json
cogs/: __init__.py
cogs/commands/: Anti_cmds.py  Antiraid_cmds.py  Autorole.py  Games.py  Logging.py  Moderation.py  Owner.py  ServerRoles.py  ServerRoles1.py  Setup.py  anti1.py  extra.py  extra1.py  extras.py  general.py  general1.py  help.py  logging.py  logging2.py  mod2.py  moderation.py  music.py  music1.py  owner.py  raidmode.py  raidmode1.py  timer.py  trusted1.py  utils.py  utils1.py  vc.py  vc1.py  welcome.py  welcome1.py
cogs/events/: Errors.py  antiban.py  antibot.py  antichannel.py  antiemojid.py  antiemojiu.py  antiemostick.py  antiguild.py  antikick.py  antintegration.py  antiping.py  antiprune.py  antirole.py  antispam.py  antivanity.py  antiwebhook.py  autoblacklist.py  join.py  on_guild.py  on_member_join.py  ready.py
core/: Astroz.py  Cog.py  Context.py  __init__.py  darkz.py
utils/: Tools.py  __init__.py  config.py  help.py  message.py
